doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/m1/lltvqgf55ss1ldhhg219hw5c0000gp/T/AppTranslocation/0F82AA07-D257-4208-B033-6BF66618E891/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/private/var/folders/m1/lltvqgf55ss1ldhhg219hw5c0000gp/T/AppTranslocation/0F82AA07-D257-4208-B033-6BF66618E891/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/m1/lltvqgf55ss1ldhhg219hw5c0000gp/T/AppTranslocation/0F82AA07-D257-4208-B033-6BF66618E891/d/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/m1/lltvqgf55ss1ldhhg219hw5c0000gp/T/AppTranslocation/0F82AA07-D257-4208-B033-6BF66618E891/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/m1/lltvqgf55ss1ldhhg219hw5c0000gp/T/AppTranslocation/0F82AA07-D257-4208-B033-6BF66618E891/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/m1/lltvqgf55ss1ldhhg219hw5c0000gp/T/AppTranslocation/0F82AA07-D257-4208-B033-6BF66618E891/d/BlueJ.app/Contents/Resources/Java/userlib/apache-csv.jar:/private/var/folders/m1/lltvqgf55ss1ldhhg219hw5c0000gp/T/AppTranslocation/0F82AA07-D257-4208-B033-6BF66618E891/d/BlueJ.app/Contents/Resources/Java/userlib/courserajava.jar:/private/var/folders/m1/lltvqgf55ss1ldhhg219hw5c0000gp/T/AppTranslocation/0F82AA07-D257-4208-B033-6BF66618E891/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/private/var/folders/m1/lltvqgf55ss1ldhhg219hw5c0000gp/T/AppTranslocation/0F82AA07-D257-4208-B033-6BF66618E891/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/private/var/folders/m1/lltvqgf55ss1ldhhg219hw5c0000gp/T/AppTranslocation/0F82AA07-D257-4208-B033-6BF66618E891/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/private/var/folders/m1/lltvqgf55ss1ldhhg219hw5c0000gp/T/AppTranslocation/0F82AA07-D257-4208-B033-6BF66618E891/d/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/kopal/Capstone project refined
-d
/Users/kopal/Capstone project refined/doc
-encoding
UTF-8
-charset
UTF-8
/Users/kopal/Capstone project refined/RecommendationRunner.java
<---- end of javadoc command ---->
Loading source file /Users/kopal/Capstone project refined/RecommendationRunner.java...
/Users/kopal/Capstone project refined/RecommendationRunner.java:64: error: ')' expected
    System.out.print("<tr class=\"movieTitle\"><th class=\"movHead\">MovieTitle</th>"......(you can write in your ideal)</tr>");
                                                                                     ^
/Users/kopal/Capstone project refined/RecommendationRunner.java:64: error: illegal start of expression
    System.out.print("<tr class=\"movieTitle\"><th class=\"movHead\">MovieTitle</th>"......(you can write in your ideal)</tr>");
                                                                                        ^
/Users/kopal/Capstone project refined/RecommendationRunner.java:64: error: ';' expected
    System.out.print("<tr class=\"movieTitle\"><th class=\"movHead\">MovieTitle</th>"......(you can write in your ideal)</tr>");
                                                                                           ^
/Users/kopal/Capstone project refined/RecommendationRunner.java:64: error: ';' expected
    System.out.print("<tr class=\"movieTitle\"><th class=\"movHead\">MovieTitle</th>"......(you can write in your ideal)</tr>");
                                                                                                   ^
/Users/kopal/Capstone project refined/RecommendationRunner.java:64: error: ';' expected
    System.out.print("<tr class=\"movieTitle\"><th class=\"movHead\">MovieTitle</th>"......(you can write in your ideal)</tr>");
                                                                                                            ^
/Users/kopal/Capstone project refined/RecommendationRunner.java:64: error: ';' expected
    System.out.print("<tr class=\"movieTitle\"><th class=\"movHead\">MovieTitle</th>"......(you can write in your ideal)</tr>");
                                                                                                                       ^
/Users/kopal/Capstone project refined/RecommendationRunner.java:64: error: illegal start of type
    System.out.print("<tr class=\"movieTitle\"><th class=\"movHead\">MovieTitle</th>"......(you can write in your ideal)</tr>");
                                                                                                                         ^
/Users/kopal/Capstone project refined/RecommendationRunner.java:64: error: illegal start of expression
    System.out.print("<tr class=\"movieTitle\"><th class=\"movHead\">MovieTitle</th>"......(you can write in your ideal)</tr>");
                                                                                                                          ^
/Users/kopal/Capstone project refined/RecommendationRunner.java:64: error: unclosed string literal
    System.out.print("<tr class=\"movieTitle\"><th class=\"movHead\">MovieTitle</th>"......(you can write in your ideal)</tr>");
                                                                                                                             ^
/Users/kopal/Capstone project refined/RecommendationRunner.java:64: error: not a statement
    System.out.print("<tr class=\"movieTitle\"><th class=\"movHead\">MovieTitle</th>"......(you can write in your ideal)</tr>");
                                                                                                                            ^
10 errors
